[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Organism.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ChromPair.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]

resource_name = "correction"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fix_bars"
} ]
}

[node name="Organism" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 550.0
rect_min_size = Vector2( 200, 550 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect" ]

[node name="slider_correct" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "correction"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/correction = SubResource( 1 )
blend_times = [  ]

[node name="chromes" parent="." index="1" instance=ExtResource( 2 )]

[node name="lbl_dead" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Died on Round 5"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[connection signal="elm_clicked" from="chromes" to="." method="_on_chromes_elm_clicked"]

[connection signal="elm_mouse_entered" from="chromes" to="." method="_on_chromes_elm_mouse_entered"]

[connection signal="elm_mouse_exited" from="chromes" to="." method="_on_chromes_elm_mouse_exited"]


